# experiement-626

./: .gitignore  ENGINEER_GUIDE.md  agent_files_structure.md
agents/: code_factory_blueprint.md  general_agent.md  lieutenant_agent.md  tier3_agent.md
blockchain/: election_system.md
chain/: Cargo.toml  ENGINEER_GUIDE.md  MVP_PLAN.md  README.md  WORK_IN_PROGRESS.md  WORK_IN_PROGRESS_M2.md  blockchain.py  kimura.py
chain/kimura-blockchain/: Cargo.toml
chain/kimura-blockchain/src/: block.rs  chain.rs  lib.rs  transaction.rs
chain/kimura-consensus/src/: election.rs  lib.rs
chain/kimura-network/: Cargo.toml
chain/kimura-network/src/: lib.rs  p2p.rs  protocol.rs  transport.rs
chain/kimura-node/: Cargo.toml
chain/kimura-node/src/: config.rs  error.rs  lib.rs  main.rs  node.rs  rpc.rs  services.rs
chain/kimura-storage/: Cargo.toml
chain/kimura-storage/src/: database.rs  lib.rs  store.rs
chain/tests/: integration_tests.rs  mod.rs  rpc_client.rs
chain/tests/service/: mod.rs
core/: base_agent.py  message_protocol.py
factory_templates/blockchain/: Cargo.toml  blockchain_cli.py  structure.md
factory_templates/blockchain/kimura-blockchain/: Cargo.toml
factory_templates/blockchain/kimura-blockchain/src/: lib.rs  transaction.rs
factory_templates/blockchain/kimura-consensus/: Cargo.toml
factory_templates/blockchain/kimura-consensus/src/: engine.rs  lib.rs  validator.rs
factory_templates/blockchain/kimura-network/src/: lib.rs  p2p.rs  transport.rs
factory_templates/blockchain/kimura-node/: Cargo.toml
factory_templates/blockchain/kimura-node/src/: lib.rs  main.rs
factory_templates/blockchain/kimura-storage/src/: cache.rs  database.rs  lib.rs  store.rs
factory_templates/blockchain/tests/: mod.rs
factory_templates/blockchain/tests/service/: integration.rs
kimimura_blockchain_service/: Cargo.toml
kimimura_blockchain_service/src/: lib.rs
remote_llm/: endpoints.md
self_propagation/: mechanism.md
tasks/: task_manager.md
utils/: logger.md
