[package]
name = "kimimura_blockchain_service"
version = "1.0.0"

[dependencies]
# Core dependencies
async-std = "1.12"
tokio = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Blockchain primitives
hex = "0.4"
sha3 = "0.10"
bs58 = "0.5"

# Networking
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
actix-web = "4"

# Cryptography
crypto-md5 = "0.1"
rand = "0.8"
rust-crypto = "0.2"

# Async runtime
rayon = "1.8"

# Utils
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[dependencies.uuid]
version = "1.5"
features = ["v4", "serde"]

[dependencies.diesel]
version = "2.1"
features = ["sqlite"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1