[package]
name = "kimura-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }