[package]
name = "kimura-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kimura-consensus = { path = "../kimura-consensus" }
kimura-network = { path = "../kimura-network" }
kimura-storage = { path = "../kimura-storage" }
kimura-blockchain = { path = "../kimura-blockchain" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
futures = "0.3"
hex = "0.4"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "kimura-node"
path = "src/main.rs"

[lib]
name = "kimura_node"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "../tests/integration_tests.rs"